nacos不同粒度的配置

--- a/alibaba-nacos-config-client/src/main/resources/bootstrap.properties
+++ b/alibaba-nacos-config-client/src/main/resources/bootstrap.properties
@@ -9,3 +9,9 @@ spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 # 配置文件的分组
 #spring.cloud.nacos.config.group=DEV_GROUP
 
+
+# 可以根据环境区分不同的配置
+spring.profiles.active=PRD
+
+# 根据命名空间取配置 (优先级比 spring.profiles.active高) 用于进行租户粒度的配置隔离
+spring.cloud.nacos.config.namespace=eed820c2-fd01-4049-8ae8-6a4c1afa923d
