共享配置；配置的优先级说明

--- a/alibaba-nacos-config-client/src/main/resources/bootstrap.properties
+++ b/alibaba-nacos-config-client/src/main/resources/bootstrap.properties
@@ -11,7 +11,18 @@ spring.cloud.nacos.config.server-addr=127.0.0.1:8848
 
 
 # 可以根据环境区分不同的配置
-spring.profiles.active=PRD
+#spring.profiles.active=PRD
 
 # 根据命名空间取配置 (优先级比 spring.profiles.active高) 用于进行租户粒度的配置隔离
-spring.cloud.nacos.config.namespace=eed820c2-fd01-4049-8ae8-6a4c1afa923d
+#spring.cloud.nacos.config.namespace=eed820c2-fd01-4049-8ae8-6a4c1afa923d
+
+
+#spring.cloud.nacos.config.ext-config[0].data-id=actuator.properties
+#spring.cloud.nacos.config.ext-config[0].group=DEFAULT_GROUP
+#spring.cloud.nacos.config.ext-config[0].refresh=true
+#spring.cloud.nacos.config.ext-config[1].data-id=log.properties
+#spring.cloud.nacos.config.ext-config[1].group=DEFAULT_GROUP
+#spring.cloud.nacos.config.ext-config[1].refresh=true
+
+#spring.cloud.nacos.config.shared-dataids=actuator.properties,log.properties
+#spring.cloud.nacos.config.refreshable-dataids=actuator.properties,log.properties
